# FinalProject

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp  udp.txt
src/client/: client.cpp  client.h
src/client/Engine/: GameObject.cpp  GameObject.h  SimpleRectangleDrawer.cpp  SimpleRectangleDrawer.h
src/client/Entittes/: Bullet.cpp  Bullet.h  Player.cpp  Player.h
src/client/GameEntities/: Bullet.cpp  Bullet.h  Player.cpp  Player.h
src/client/Manager/: ClientManager.cpp  ClientManager.h  DrawManager.cpp  DrawManager.h  KeyboardInterface.cpp  KeyboardInterface.h  Manager.cpp  Manager.h
src/client/Menu/: Menu.cpp  Menu.h
src/client/Network/: Client.cpp  Client.h
src/client/Render/: SimpleRectangleDrawer.h  SpriteDrawer.cpp  SpriteDrawer.h
src/client/menu/: Menu.cpp  Menu.h
src/configuration/: config.h  gameplay.h  map.h  network.h  render.h
src/map/: Level.cpp  Level.h  map.tmx
src/map/levels/DemoLevel/: map.tmx  map2.tmx
src/server/: GameManager.h  client_handler.cpp  client_handler.h  game_manager.cpp  game_manager.h  player_state.cpp  player_state.h  server.cpp  server.h
src/server/Engine/: GameObject.cpp  GameObject.h  Properties.cpp  Properties.h  Property.cpp  Property.h  RectCollider.cpp  RectCollider.h  RectangleCollider.cpp  RectangleCollider.h  gameObject.cpp  gameObject.h
src/server/GameEntities/: Blast.cpp  Blast.h  Bullet.cpp  Bullet.h  MovingPlatform.cpp  MovingPlatform.h  Player.cpp  Player.h  SolidBlock.cpp  SolidBlock.h
src/server/Manager/: BaseManager.cpp  BaseManager.h  GameManager.cpp  GameManager.h  Manager.cpp  Manager.h  Utils.h
src/server/Managers/: GameManager.cpp  GameManager.h  LevelManager.cpp  LevelManager.h  Utils.h
src/server/Network/: ClientHandler.cpp  ClientHandler.h  Server.cpp  Server.h  client_handler.cpp  client_handler.h  server.cpp  server.h
